[gd_scene load_steps=3 format=3 uid="uid://ckh34t8w2spw7"]

[ext_resource type="Script" uid="uid://b2hg7ord6gfmo" path="res://menu_inicial.gd" id="1_5y2fb"]
[ext_resource type="Texture2D" uid="uid://l2a2gwy2eqgh" path="res://Artes/CapaDoJogo.png" id="2_omb8n"]

[node name="MenuInicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5y2fb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_omb8n")
expand_mode = 1

[node name="MenuPrincipal" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -33.0
offset_right = 29.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Jogar" type="Button" parent="MenuPrincipal"]
layout_mode = 2
text = "JOGAR"

[node name="sair" type="Button" parent="MenuPrincipal"]
layout_mode = 2
text = "SAIR"

[node name="creditos" type="Button" parent="MenuPrincipal"]
layout_mode = 2
text = "Creditos"

[node name="MenuDificuldade" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_right = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnCasual" type="Button" parent="MenuDificuldade"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Casual"

[node name="BtnNormal" type="Button" parent="MenuDificuldade"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Normal"

[node name="BtnSobrevivente" type="Button" parent="MenuDificuldade"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Sobrevivente"

[node name="BtnVoltar" type="Button" parent="MenuDificuldade"]
layout_mode = 2
text = "Voltar"

[connection signal="pressed" from="MenuPrincipal/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MenuPrincipal/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="MenuPrincipal/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="MenuDificuldade/BtnCasual" to="." method="_on_btn_casual_pressed"]
[connection signal="pressed" from="MenuDificuldade/BtnNormal" to="." method="_on_btn_normal_pressed"]
[connection signal="pressed" from="MenuDificuldade/BtnSobrevivente" to="." method="_on_btn_sobrevivente_pressed"]
[connection signal="pressed" from="MenuDificuldade/BtnVoltar" to="." method="_on_btn_voltar_pressed"]
